--- a/style.css
+++ b/style.css
@@ -774,7 +774,7 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: rgba(0,0,0,0.6)!important;
 }
 
 .btn-atomic-tangerine:hover {
