--- a/style.css
+++ b/style.css
@@ -779,7 +779,7 @@ h4 {
 
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #FFFFFF!important;
+    color: rgba(0,0,0,1)!important;
 }
 
 .ltc-white {
