--- a/style.css
+++ b/style.css
@@ -818,7 +818,7 @@ h4 {
 .bg-presentation {
     background-image: url("img/image-de-presentation.bmp");
 }
-footer p{color:rgba(0,0,0,0.6);}
+footer{color:rgba(0,0,0,0.6);}
 @media (max-width: 1024px) {
     .bloc {
         padding-left: 20px;
