--- a/style.css
+++ b/style.css
@@ -696,6 +696,7 @@ p {
 .social {
     max-width: 400px;
     margin: auto auto auto auto;
+
 }
 
 h2 {
@@ -818,7 +819,10 @@ h4 {
 .bg-presentation {
     background-image: url("img/image-de-presentation.bmp");
 }
-footer{color:rgba(0,0,0,0.6);}
+
+footer li{color:rgba(0,0,0);font-size: 1.2em;list-style-type: none}
+footer a{color:#000;}
+
 @media (max-width: 1024px) {
     .bloc {
         padding-left: 20px;
