--- a/style.css
+++ b/style.css
@@ -766,7 +766,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #A85C39;
 }
 
 .tc-white {
@@ -820,7 +820,7 @@ h4 {
     background-image: url("img/image-de-presentation.bmp");
 }
 
-footer li{color:rgba(0,0,0);font-size: 1.2em;list-style-type: none}
+footer li{color:rgba(0,0,0);font-size: 1.2em;list-style-type: }
 footer a{color:#000;}
 
 @media (max-width: 1024px) {
