--- a/style.css
+++ b/style.css
@@ -820,7 +820,8 @@ h4 {
     background-image: url("img/image-de-presentation.bmp");
 }
 
-footer li{color:rgba(0,0,0);font-size: 1.2em;li}
+footer a{background: red;font-size: 1em;color:green}
+footer li{color:rgba(0,0,0);font-size: 1.2em;list-style-type: none}
 footer a{color:#000;}
 
 @media (max-width: 1024px) {
