--- a/style.css
+++ b/style.css
@@ -355,7 +355,7 @@ li:hover a{color:#000;}
     position: relative;
     z-index: 2;
 }
-
+.link{color:#000;}
 @media (min-width: 768px) {
     .site-navigation {
         position: absolute;
