--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@ body {
     padding: 0;
     background: #FFF;
     overflow-x: hidden;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    /*-webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;*/
 }
 
 a,button {transition: all .3s ease-in-out; }
-li:hover a{color:#000;}
+/*li:hover a{color:#000;}*/
 
 
 
@@ -18,7 +18,7 @@ li:hover a{color:#000;}
     bottom: 0;
     width: 100%;
     z-index: 100000;
-    background: #FFFFFF url("img/pageload-spinner.gif") no-repeat center center;
+   /* background: #FFFFFF url("img/pageload-spinner.gif") no-repeat center center;*/
 }
 
 .bloc {
@@ -26,10 +26,7 @@ li:hover a{color:#000;}
     clear: both;
     background: 50% 50% no-repeat;
     padding: 0 50px;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    
     position: relative;
 }
 
@@ -50,21 +47,7 @@ li:hover a{color:#000;}
     padding: 20px 50px;
 }
 
-.bg-center,
-.bg-l-edge,
-.bg-r-edge,
-.bg-t-edge,
-.bg-b-edge,
-.bg-tl-edge,
-.bg-bl-edge,
-.bg-tr-edge,
-.bg-br-edge,
-.bg-repeat {
-    -webkit-background-size: auto!important;
-    -moz-background-size: auto!important;
-    -o-background-size: auto!important;
-    background-size: auto!important;
-}
+
 
 .bg-repeat {
     background: repeat;
@@ -362,7 +345,7 @@ li:hover a{color:#000;}
         top: 50%;
         right: 20px;
         transform: translate(0, -50%);
-        -webkit-transform: translateY(-50%);
+       
     }
     .nav > li .dropdown-menu a,
     .nav > li .dropdown-menu a:hover {
@@ -545,13 +528,12 @@ a[data-lightbox]:hover::before {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
+    
 }
 
 a[data-lightbox]:hover img {
     opacity: 0.6;
-    -webkit-animation-fill-mode: none;
-    animation-fill-mode: none;
+    
 }
 
 #lightbox-modal {
@@ -823,7 +805,7 @@ h4 {
 
 footer span{display: inline-block;font-size: 1.2em}
 footer li{color:#fff;font-size: 1.2em;list-style-type: none}
-.link{color:#fff;transform: all .2s;}
+.link{color:#fff; transition:0.2s;}
 .active:hover{border-bottom: 2px solid #fff}
 
 a{color:inherit;}
@@ -841,26 +823,9 @@ a{color:inherit;}
     }
 }
 
-@media (max-width: 992px) and (min-width: 768px) {
-    .navbar .nav {
-        max-width: 80%
-    }
-    .nav-center.navbar .nav {
-        max-width: 100%
-    }
-}
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
-    .b-parallax {
-        background-attachment: scroll;
-    }
-}
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
-    .b-parallax {
-        background-attachment: scroll;
-    }
-}
+
 
 @media (max-width: 991px) {
     .container {
@@ -874,10 +839,7 @@ a{color:inherit;}
         overflow-x: hidden;
         position: relative;
     }
-    .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
+    
     .bloc-group,
     .bloc-group .bloc {
         display: block;
@@ -886,8 +848,8 @@ a{color:inherit;}
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
+        /*padding-left: constant(safe-area-inset-left);*/
+        /*padding-right: constant(safe-area-inset-right);*/
     }
 }
 
@@ -921,9 +883,7 @@ a{color:inherit;}
     }
     .site-navigation {
         position: inherit;
-        transform: none;
-        -webkit-transform: none;
-        -ms-transform: none;
+        
     }
     .nav > li {
         margin-top: 0;
@@ -960,8 +920,7 @@ a{color:inherit;}
     .navbar-collapse {
         padding: 0;
         overflow-x: hidden;
-        -webkit-box-shadow: none;
-        box-shadow: none;
+       
     }
     .navbar-brand img {
         max-height: 40px;
