--- a/style.css
+++ b/style.css
@@ -149,9 +149,9 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a {    font-family: "helvetica";    font-weight: 
     margin: auto auto auto auto;}
 
 p {    font-size: 1.2em;}
-.tight-width-whitespace {    max-width: 600px;    margin: auto auto auto auto;}
+.tight-width-whitespace {max-width: 600px;margin: auto auto auto auto;}
 .h1 {    font-size: 20px;    font-family: "Open Sans";}
-.cta-hero {    margin-top: 22px;    color: #FFFFFF!important;    text-transform: uppercase;    padding: 12px 28px 12px 28px;    font-size: 16px;    font-weight: 700;}
+.cta-hero {    margin-top: 22px;    color: #FFFFFF!important;text-transform: uppercase;padding: 12px 28px 12px 28px;font-size: 16px;font-weight: 700;}
 
 .social {    max-width: 400px;    margin: auto auto auto auto;}
 
@@ -199,7 +199,7 @@ h4 {    color: #333333!important;}
 }
 
 .bg-banniere {
-    background-image: url("img/la-chouette-agence-banniere.jpg");
+    background:center/cover url("img/la-chouette-agence-banniere.jpg");
 }
 
 .bg-presentation {
