--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ h4 {    color: #333333!important;}
 .bgc-atomic-tangerine {    background-color: #A71C12;}
 .tc-white {    color: #F3A183!important;}
 .btn-atomic-tangerine {    background: #F3976C;    color: rgba(0,0,0,0.6)!important;}
-.btn-atomic-tangerine:hover {    background: #c27956!important;    color: rgba(0,0,0,1)!important;}
+.btn-atomic-tangerine:hover {background: #F3976C!important;    color: rgba(0,0,0,1)!important;}
 .ltc-white {    color: #FFFFFF!important;}
 .ltc-white:hover {    color: #cccccc!important;}
 .ltc-atomic-tangerine {    color: #F3976C!important;}
