--- a/style.css
+++ b/style.css
@@ -10,30 +10,7 @@ a,button {transition: all .3s ease-in-out;/*li:hover a{color:#000;*/}
 .bloc-sm {padding: 20px 50px;}
 .bg-repeat {background: repeat;}
 .bg-t-edge {background: top no-repeat;}
-/*.bloc-bg-texture::before {content: "";background-size: 2px 2px;position: absolute;top: 0;bottom: 0;left: 0;right: 0;}*/
-/*.texture-paper::before {background: url("img/texture-paper.png"); background-size: 280px 280px;}*/
 .b-parallax {background-attachment: fixed;}
-.d-bloc {color: rgba(255, 255, 255, .7);}
-.d-bloc button:hover {color: rgba(255, 255, 255, .9);}
-.d-bloc .icon-round,.d-bloc .icon-square,.d-bloc .icon-rounded,.d-bloc .icon-semi-rounded-a,.d-bloc .icon-semi-rounded-b {border-color: rgba(255, 255, 255, .9);}
-.d-bloc .divider-h span {border-color: rgba(255, 255, 255, .2);}
-/*.d-bloc .a-btn,.d-bloc .navbar a,.d-bloc .navbar-brand,.d-bloc a .icon-sm,.d-bloc a .icon-md,.d-bloc a .icon-lg,.d-bloc a .icon-xl,.d-bloc h1 a,.d-bloc h2 a,
-.d-bloc h3 a,.d-bloc h4 a,.d-bloc h5 a,.d-bloc h6 a,.d-bloc p a {color: rgba(255, 255, 255);}*/
-
-.d-bloc .a-btn:hover,.d-bloc .navbar a:hover,.d-bloc .navbar-brand:hover,.d-bloc a:hover .icon-sm,.d-bloc a:hover .icon-md,.d-bloc a:hover .icon-lg,.d-bloc a:hover .icon-xl,
-.d-bloc h1 a:hover,.d-bloc h2 a:hover,.d-bloc h3 a:hover,.d-bloc h4 a:hover,.d-bloc h5 a:hover,.d-bloc h6 a:hover,
-.d-bloc p a:hover {color: rgba(255, 255, 255, 1);}
-.d-bloc .navbar-toggle .icon-bar {background: rgba(255, 255, 255, 1);}
-.d-bloc .btn-wire,.d-bloc .btn-wire:hover {color: rgba(255, 255, 255, 1);border-color: rgba(255, 255, 255, 1);}
-.d-bloc .panel {color: rgba(0, 0, 0, .5);}
-.d-bloc .panel button:hover {color: rgba(0, 0, 0, .7);}
-.d-bloc .panel icon {border-color: rgba(0, 0, 0, .7);}
-.d-bloc .panel .divider-h span {border-color: rgba(0, 0, 0, .1);}
-.d-bloc .panel .a-btn {color: rgba(0, 0, 0, .6);}
-.d-bloc .panel .a-btn:hover {color: rgba(0, 0, 0, 1);}
-.d-bloc .panel .btn-wire,.d-bloc .panel .btn-wire:hover {color: rgba(0, 0, 0, .7);border-color: rgba(0, 0, 0, .3);}
-.d-bloc .panel,.l-bloc {color: rgba(0, 0, 0, .5);}
-.d-bloc .panel button:hover,.l-bloc button:hover {color: rgba(0, 0, 0, .7);}
 .l-bloc .icon-round,.l-bloc .icon-square,.l-bloc .icon-rounded,.l-bloc .icon-semi-rounded-a,.l-bloc .icon-semi-rounded-b {border-color: rgba(0, 0, 0, .7);}
 .d-bloc .panel .divider-h span,.l-bloc .divider-h span {border-color: rgba(0, 0, 0, .1);}
 .d-bloc .panel .a-btn,.l-bloc .a-btn,.l-bloc .navbar a,.l-bloc .navbar-brand,.l-bloc a .icon-sm,.l-bloc a .icon-md,.l-bloc a .icon-lg,.l-bloc a .icon-xl,
@@ -79,13 +56,13 @@ nav .caret {margin: 0 5px;}
 .btn {    margin: 0 5px 5px 0;}
 .btn.pull-right {    margin: 0 0 5px 5px;}
 .btn-d,.btn-d:hover,.btn-d:focus { color: #FFF; background: rgba(0, 0, 0, .3);}
-button {    outline: none!important;}
+
 .btn-rd {    border-radius: 40px;}
 
 .btn-clean {    border: 1px solid rgba(0, 0, 0, .08);    border-bottom-color: rgba(0, 0, 0, .1);    text-shadow: 0 1px 0 rgba(0, 0, 1, .1);    box-shadow: 0 1px 3px rgba(0, 0, 1, .25), inset 0 1px 0 0 rgba(255, 255, 255, .15);
 }
 
-.icon-md {    font-size: 30px!important;}
+/*.icon-md {    font-size: 30px!important;}*/
 
 .icon-lg {    font-size: 60px!important;}
 
@@ -179,7 +156,7 @@ h4 {color: #333333!important;}
 .bgc-white {    background-color: #FFFFFF;}
 .bgc-dark-slate-blue {    background-color: #364577;}
 .bgc-atomic-tangerine {    background-color: #A71C12;}
-.tc-white {color:#fff;}
+.tc-white {color:rgb(55, 54, 0);}
 .btn-atomic-tangerine {    background: #F3976C;    color: rgba(0,0,0,0.6)!important;}
 .btn-atomic-tangerine:hover {background: #F3976C!important;    color: rgba(0,0,0,1)!important;}
 .ltc-white {    color: #FFFFFF!important;}
@@ -214,16 +191,6 @@ footer li{color:#fff;font-size: 1.2em;list-style-type: none}
 
 a{color:inherit;}
 h1{color:#000;}
-/*@media (min-width: 768px) {
-    .site-navigation {position: absolute;top: 50%;right: 20px;transform: translate(0, -50%);}
-    .nav > li .dropdown-menu a,.nav > li .dropdown-menu a:hover {color: #484848;}
-    .nav-invert .site-navigation {left: 0;right: 0; }
-    .nav-center {text-align: center;}
-    .nav-center .navbar-header {width: 100%;}
-    .nav-center .navbar-header, .nav-center .navbar-brand,.nav-center .nav > li {float: none;display: inline-block;}
-    .nav-center .site-navigation {position: relative;width: 100%;right: 0; margin-right: 0px;margin-top: 20px; }
-    .nav-center.mini-nav .navbar-toggle {float: none;margin: 10px auto 0;}
-}*/
 @media (max-width: 767px) {
     .page-container {
         overflow-x: hidden;position: relative;}
