--- a/style.css
+++ b/style.css
@@ -79,23 +79,21 @@ a[data-lightbox]:hover img {opacity: 0.6;}
 #lightbox-modal .modal-dialog img {max-height: 90vh;margin: 0 auto;}
 .lightbox-caption {    padding: 20px;    color: #FFF;    background: rgba(0, 0, 0, .5);    position: absolute;    left: 15px;    right: 15px;    bottom: 5px;
 }
-.close-lightbox {color: #FFF;    font-size: 30px;    position: absolute;    top: 20px;    right: 20px;    z-index: 20;    background: rgba(0, 0, 0, .5);
-    border: none;line-height: 30px;    padding: 0 9px 5px;    opacity: 0.3;}
-.close-lightbox:hover,.next-lightbox:hover,.prev-lightbox:hover {    opacity: 1.0;    color: #FFF;}
-.next-lightbox,.prev-lightbox {    font-size: 20px;    color: rgba(255, 255, 255, .9);    background: rgba(0, 0, 0, .5);    transition: all .2s ease-in-out;
-    position: absolute;    top: 45%;    z-index: 1;    opacity: 0.4;}
-.next-lightbox {padding: 6px 8px 1px 13px;    right: 25px;}
-.prev-lightbox {padding: 6px 13px 1px 10px;    left: 25px;}
+.close-lightbox {color: #FFF;    font-size: 30px;position: absolute;top: 20px;right: 20px;z-index: 20;background: rgba(0, 0, 0, .5);
+    border: none;line-height: 30px;    padding: 0 9px 5px;opacity: 0.3;}
+.close-lightbox:hover,.next-lightbox:hover,.prev-lightbox:hover {opacity: 1.0;color: #FFF;}
+.next-lightbox,.prev-lightbox {    font-size: 20px;    color: rgba(255, 255, 255, .9);background: rgba(0, 0, 0, .5);transition: all .2s ease-in-out;
+    position: absolute; top: 45%;z-index: 1;    opacity: 0.4;}
+.next-lightbox {padding: 6px 8px 1px 13px;right: 25px;}
+.prev-lightbox {padding: 6px 13px 1px 10px;left: 25px;}
 .snapshot-lb .modal-body {padding-bottom: 45px;}
-.snapshot-lb .lightbox-caption {padding: 0;    color: rgba(0, 0, 0, .5);    background: none;}
-
+.snapshot-lb .lightbox-caption {padding: 0;color: rgba(0, 0, 0, .5);background: none;}
 .container {max-width: 1000px;}
 .hero-bloc-text {font-size: 38px;}
 .hero-bloc-text-sub {font-size: 36px;}
 .statement-bloc-text {line-height: 26px;font-style: italic;font-size: 20px;text-align: center;font-weight: lighter;max-width: 520px;margin: auto auto auto auto;}
 p {font-size: 1.2em;color:#000;}
 .tight-width-whitespace {max-width: 600px;margin:auto;}
-
 .cta-hero {margin-top: 22px;color: #FFFFFF!important;text-transform: uppercase;padding: 12px 28px 12px 28px;font-size: 16px;font-weight: 700;}
 .social {max-width: 400px;  margin: auto auto auto auto;}
 .icons {margin-bottom: 14px;margin-top: 24px;}
@@ -165,15 +163,12 @@ h1{color:#000;}
     .b-parallax { background-attachment: scroll;    }
     .page-container, #hero-bloc { overflow-x: hidden;  position: relative; }
     .bloc-group,.bloc-group .bloc {display: block;width: 100%;    }
-    .bloc-fill-screen .fill-bloc-top-edge,.bloc-fill-screen .fill-bloc-bottom-edge { padding: 0 20px;
-        /*padding-left: constant(safe-area-inset-left);*/
-        /*padding-right: constant(safe-area-inset-right);*/
-    }
+    .bloc-fill-screen .fill-bloc-top-edge,.bloc-fill-screen .fill-bloc-bottom-edge { padding: 0 20px;}
 }
 @media (max-width: 1024px) {
     .bloc { padding-left: 20px; padding-right: 20px;}
     .bloc.full-width-bloc,.bloc-tile-2.full-width-bloc .container, .bloc-tile-3.full-width-bloc .container,.bloc-tile-4.full-width-bloc .container {
-        padding-left: 0;   padding-right: 0;}
+        padding-left: 0;padding-right: 0;}
 }
 
 
